[package]
name = "x11-hello"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#quick-error = "1.2.1"
#cstr-macro = "0.1.0"
#libc = "0.2.39"
#nom = "7.1.3"
#cexpr = "0.6.0"
#bindgen = "0.65.1"
#clap = "4.2.7"
#x11-dl = "2.14.0"
#dbus = "0.5.3"
x11 = { version = "2.21.0", features = ["xlib"] }